<resources>
    <string name="app_name">Eau De Toilette</string>
    <string name="perfume_oil">Perfume Oil</string>
    <string name="impression_of_acqua_di_gio">Impression of Acqua Di Gio</string>
    <string name="_4_26">4.26</string>
    <string name="mega_discount_impression_of_acqua_di_gio_by_giorgioarmani_concentrated_attar_perfume_oil">Mega Discount, Impression of Acqua Di Gio by GiorgioArmani concentrated attar perfume Oil</string>
    <string name="view_details"><![CDATA[View Details >>]]></string>
</resources>