<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="15dp"
    android:id="@+id/parentContainer"
    android:layout_marginHorizontal="10dp"
    app:cardBackgroundColor="@color/cardBackground"
    android:layout_marginTop="10dp"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/perfume_oil"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:textColor="@android:color/darker_gray"
                    android:id="@+id/itemName"/>

                <TextView
                    android:layout_marginTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/impression_of_acqua_di_gio"
                    android:textSize="14sp"
                    android:textStyle="italic"
                    android:textColor="@android:color/darker_gray"
                    android:id="@+id/brand"/>
                <LinearLayout
                    android:layout_marginTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_4_26"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:textSize="14sp"
                        android:layout_gravity="center_vertical"
                        android:id="@+id/rating"/>

                    <ImageView
                        android:layout_marginStart="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_baseline_star_24"
                        app:tint="@color/white"/>
                </LinearLayout>
            </LinearLayout>
            <ImageView
                android:layout_marginStart="10dp"
                android:layout_width="50dp"
                android:layout_height="80dp"
                android:layout_weight="0.5"
                android:id="@+id/image"/>
        </LinearLayout>
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mega_discount_impression_of_acqua_di_gio_by_giorgioarmani_concentrated_attar_perfume_oil"
            android:textColor="@android:color/darker_gray"
            android:textSize="14sp"
            android:layout_gravity="center_vertical"
            android:id="@+id/desc"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_details"
            android:textStyle="bold|italic"
            android:textColor="@android:color/darker_gray"
            android:textSize="14sp"
            android:layout_marginTop="10dp"
            android:layout_gravity="end"
            android:id="@+id/next"/>
    </LinearLayout>

</androidx.cardview.widget.CardView>