<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.DetailsActivity">

        <LinearLayout
            android:layout_margin="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_marginStart="10dp"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/ic_launcher_background"
                android:id="@+id/thumbnailIV"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/perfume_oil"
                        android:textSize="22sp"
                        android:textStyle="bold"
                        android:layout_gravity="center_horizontal"
                        android:textColor="@color/black"
                        android:id="@+id/itemName"/>

                    <TextView
                        android:layout_marginTop="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/impression_of_acqua_di_gio"
                        android:textSize="14sp"
                        android:textStyle="italic"
                        android:layout_gravity="center_horizontal"
                        android:textColor="@color/black"
                        android:id="@+id/brand"/>
                    <LinearLayout
                        android:layout_marginTop="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_gravity="center_horizontal">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/_4_26"
                            android:textColor="@color/black"
                            android:textStyle="bold"
                            android:textSize="14sp"
                            android:layout_gravity="center_vertical"
                            android:id="@+id/rating"/>

                        <ImageView
                            android:layout_marginStart="10dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_baseline_star_24"
                            app:tint="@color/black"/>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mega_discount_impression_of_acqua_di_gio_by_giorgioarmani_concentrated_attar_perfume_oil"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:layout_gravity="center_vertical"
                android:id="@+id/desc"/>
        </LinearLayout>
</RelativeLayout>